2009-03-02  Alan Modra  <amodra@bigpond.net.au>

	2009-02-26  Peter Bergner  <bergner@vnet.ibm.com>
	* config/tc-ppc.c (pre_defined_registers): Add "f32" to "f63",
	"f.32" to "f.63", "vs0" to "vs63" and "vs.0" to "vs.63".
	(parse_cpu): Extend -mpower7 to accept power7 and isel instructions.

	2009-01-09  Peter Bergner  <bergner@vnet.ibm.com>
	* config/tc-ppc.c (ppc_setup_opcodes): Remove PPC_OPCODE_NOPOWER4 test.
	Test the new "deprecated" opcode field.

	2008-12-04  Ben Elliston  <bje@au.ibm.com>
	* config/tc-ppc.c (parse_cpu): Remove booke64 support. Update
	usage strings.
	(ppc_setup_opcodes): Likewise, remove booke64 support.
	* doc/c-ppc.texi (PowerPC-Opts): Remove -mbooke32 and -mbooke64.
	* doc/as.texinfo (Overview): Likewise.

	2008-09-09  Peter Bergner  <bergner@vnet.ibm.com>
	* config/tc-ppc.c (ppc_setup_opcodes): Simplify POWER4/NOPOWER4 test.
	Remove POWER5 and POWER6 tests.

2009-01-14  Jakub Jelinek  <jakub@redhat.com>

	* Makefile.am (ehopt.o): Add struc-symbol.h.
	* Makefile.in: Regenerated.
	* ehopt.c: Include struc-symbol.h.
	(check_eh_frame): For very small O_constant DW_CFA_advance_loc4
	create correct DW_CFA_advance_loc.  Handle O_subtract only
	for code alignment factor 1, otherwise handle O_divide or
	O_right_shift of O_subtract and O_constant.
	(eh_frame_estimate_size_before_relax): Always divide by ca.
	(eh_frame_convert_frag): Likewise.

2009-01-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* dw2gencfi.c (output_cfi_insn): Scale DW_CFA_advance_loc1,
	DW_CFA_advance_loc2 and DW_CFA_advance_loc4 outputs.

2009-01-08  Adam Nemet  <anemet@caviumnetworks.com>

	* config/tc-mips.c (NO_ISA_COP): New macro.
	(COP_INSN): New macro.
	(is_opcode_valid): Use them.
	(macro) <ld_st>: Use them.  Don't accept coprocessor load store
	insns based on the ISA if CPU is NO_ISA_COP.
	<copz>: Likewise for coprocessor operations.

2008-10-09  Eric Botcazou  <ebotcazou@adacore.com>

	* dw2gencfi.c (cfi_finish): Deal with md_fix_up_eh_frame.