@@ -1,3 +1,7 @@
+2009-03-04  Alan Modra  <amodra@bigpond.net.au>
+
+	* config/tc-ppc.c (md_assemble): APUinfo only for e500.
+
 2009-03-02  Alan Modra  <amodra@bigpond.net.au>
 
 	2009-02-26  Peter Bergner  <bergner@vnet.ibm.com>
@@ -154,7 +158,7 @@
 	targets.
 	* doc/c-i386.texi (i386-Directives): New node.  Used to document
 	the .lcomm directive.
-	
+
 2008-08-30  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
 
 	* config/tc-hppa.h: Don't define DWARF2_EH_FRAME_READ_ONLY on Linux
